--- a/assignment_3.ipynb
+++ b/assignment_3.ipynb
@@ -1,36 +1,119 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "bcebe516",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: nltk==3.2.5 in c:\\users\\bandp\\anaconda3\\envs\\assignment2\\lib\\site-packages (3.2.5)\n",
-      "Requirement already satisfied: six in c:\\users\\bandp\\anaconda3\\envs\\assignment2\\lib\\site-packages (from nltk==3.2.5) (1.16.0)\n"
-     ]
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "assignment_3.ipynb",
+      "provenance": [],
+      "collapsed_sections": []
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
     }
-   ],
-   "source": [
-    "!conda activate Assignment2"
-   ]
   },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "7b8e63c8",
-   "metadata": {},
-   "outputs": [
+  "cells": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "showing info https://raw.githubusercontent.com/nltk/nltk_data/gh-pages/index.xml\n"
-     ]
+      "cell_type": "markdown",
+      "source": [
+        "# Assignmet - 3\n",
+        "\n",
+        "Pooja Bandal\n",
+        "\n",
+        "12th. March, 2022\n",
+        "\n",
+        "----\n",
+        "\n",
+        "### Start by cloning the repository"
+      ],
+      "metadata": {
+        "id": "NkLGgs_0p4rq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZuARA7Iujk7t",
+        "outputId": "8c8eecf0-942c-4ae8-dda4-b0e33d60d82b"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'Assignment_3'...\n",
+            "remote: Enumerating objects: 99, done.\u001b[K\n",
+            "remote: Counting objects: 100% (99/99), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (80/80), done.\u001b[K\n",
+            "remote: Total 99 (delta 33), reused 56 (delta 12), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (99/99), done.\n"
+          ]
+        }
+      ],
+      "source": [
+        "!git clone https://github.com/bandpooja/Assignment_3.git"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Install all the requirements"
+      ],
+      "metadata": {
+        "id": "8uGbK1_GqYso"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install -r 'Assignment_3/requirements.txt'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FbEfj1saj1ep",
+        "outputId": "de0c9b96-38c9-4971-e562-d13d0f769a13"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: nltk~=3.2.5 in /usr/local/lib/python3.7/dist-packages (from -r Assignment_3/requirements.txt (line 1)) (3.2.5)\n",
+            "Collecting pytrec-eval-terrier\n",
+            "  Downloading pytrec_eval_terrier-0.5.2-cp37-cp37m-manylinux2010_x86_64.whl (287 kB)\n",
+            "\u001b[K     |████████████████████████████████| 287 kB 5.4 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from -r Assignment_3/requirements.txt (line 3)) (1.21.5)\n",
+            "Requirement already satisfied: pandas in /usr/local/lib/python3.7/dist-packages (from -r Assignment_3/requirements.txt (line 4)) (1.3.5)\n",
+            "Requirement already satisfied: seaborn in /usr/local/lib/python3.7/dist-packages (from -r Assignment_3/requirements.txt (line 5)) (0.11.2)\n",
+            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.7/dist-packages (from -r Assignment_3/requirements.txt (line 6)) (3.2.2)\n",
+            "Requirement already satisfied: gensim in /usr/local/lib/python3.7/dist-packages (from -r Assignment_3/requirements.txt (line 7)) (3.6.0)\n",
+            "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.7/dist-packages (from -r Assignment_3/requirements.txt (line 8)) (1.0.2)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from nltk~=3.2.5->-r Assignment_3/requirements.txt (line 1)) (1.15.0)\n",
+            "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas->-r Assignment_3/requirements.txt (line 4)) (2.8.2)\n",
+            "Requirement already satisfied: pytz>=2017.3 in /usr/local/lib/python3.7/dist-packages (from pandas->-r Assignment_3/requirements.txt (line 4)) (2018.9)\n",
+            "Requirement already satisfied: scipy>=1.0 in /usr/local/lib/python3.7/dist-packages (from seaborn->-r Assignment_3/requirements.txt (line 5)) (1.4.1)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib->-r Assignment_3/requirements.txt (line 6)) (3.0.7)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib->-r Assignment_3/requirements.txt (line 6)) (1.4.0)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib->-r Assignment_3/requirements.txt (line 6)) (0.11.0)\n",
+            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.7/dist-packages (from kiwisolver>=1.0.1->matplotlib->-r Assignment_3/requirements.txt (line 6)) (3.10.0.2)\n",
+            "Requirement already satisfied: smart-open>=1.2.1 in /usr/local/lib/python3.7/dist-packages (from gensim->-r Assignment_3/requirements.txt (line 7)) (5.2.1)\n",
+            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from scikit-learn->-r Assignment_3/requirements.txt (line 8)) (3.1.0)\n",
+            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.7/dist-packages (from scikit-learn->-r Assignment_3/requirements.txt (line 8)) (1.1.0)\n",
+            "Installing collected packages: pytrec-eval-terrier\n",
+            "Successfully installed pytrec-eval-terrier-0.5.2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
